<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/number"
          android:textColor="@color/black"
          android:textSize="@dimen/_16sdp"
          android:drawableStart="@drawable/ic_backarrow">

      </TextView>

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/ecommerce"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ecommerce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ContentDescription">

    </ImageView>

    <ImageView
        android:id="@+id/dashline"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dotted_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ecommerce"
        tools:ignore="ContentDescription">

    </ImageView>

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/ecommerce"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="@string/title_order_placed">

    </TextView>


    <TextView
        android:id="@+id/recv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/order"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/ecommerce"
        tools:text="@string/label_order_recived">

    </TextView>

    <ImageView
        android:id="@+id/confm"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/dashline"
        android:src="@drawable/security"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/ordercnfm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/confm"
        app:layout_constraintTop_toBottomOf="@+id/recv"
        tools:text="@string/title_order_confirmed">

    </TextView>

    <TextView
        android:id="@+id/orderschd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ordercnfm"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/confm"
        tools:text="@string/label_order_scheduled">

    </TextView>


    <ImageView
        android:id="@+id/dashlineschd"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dotted_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confm"
        tools:ignore="ContentDescription">

    </ImageView>

    <ImageView
        android:id="@+id/imgprocess"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/dashlineschd"
        android:src="@drawable/payment_method"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/orderprcss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgprocess"
        app:layout_constraintTop_toBottomOf="@+id/ordercnfm"
        tools:text="@string/title_order_proceed">

    </TextView>

    <TextView
        android:id="@+id/prepord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orderprcss"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgprocess"
        tools:text="@string/label_order_preparing">

    </TextView>

    <ImageView
        android:id="@+id/dashlineprp"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dotted_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgprocess"
        tools:ignore="ContentDescription">

    </ImageView>

    <ImageView
        android:id="@+id/imgprep"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/dashlineprp"
        android:src="@drawable/discount"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/orderpick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgprep"
        app:layout_constraintTop_toBottomOf="@+id/prepord"
        tools:text="@string/title_order_picked">

    </TextView>

    <TextView
        android:id="@+id/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orderpick"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgprep"
        tools:text="@string/label_order_picked">

    </TextView>

    <ImageView
        android:id="@+id/dashlinedel"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dotted_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgprep"
        tools:ignore="ContentDescription">

    </ImageView>

    <ImageView
        android:id="@+id/imgdelv"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/dashlinedel"
        android:src="@drawable/delivery_truck"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>


    <TextView
        android:id="@+id/orderdel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgdelv"
        app:layout_constraintTop_toBottomOf="@+id/ready"
        tools:text="@string/title_order_Delivered">

    </TextView>

    <TextView
        android:id="@+id/delv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orderdel"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/avenirltstd_medium"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toRightOf="@+id/imgprep"
        tools:text="@string/label_order_delivered">

    </TextView>














</androidx.constraintlayout.widget.ConstraintLayout>