<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="acceptOrderViewModel"
            type="com.gox.shop.views.accept.AcceptOrderViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/shadow_white_corner_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/order_preparation_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center|start"
            android:background="@drawable/bg_toll_square"
            android:fontFamily="@font/avenirltstd_medium"
            android:inputType="numberDecimal"
            android:padding="@dimen/_9sdp"
            android:singleLine="true"
            android:maxLines="1"
            android:text="@={acceptOrderViewModel.prePareTime}"
            android:textSize="@dimen/_10sdp"/>


        <LinearLayout
            android:id="@+id/llt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_toll_confirm"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOrderCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:onClick="@{() -> acceptOrderViewModel.cancelOrder()}"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvOrderAccpet"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Ok"
                android:onClick="@{() -> acceptOrderViewModel.acceptorder()}"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>


</layout>